<resources>
    <string name="app_name">Quiz</string>
    <string name="edit_txt_hint">Enter your answer here</string>

    <string name="q1">Q1. Solve the system of inequalities:</string>
    <string name="q1_math"> \\begin{cases} x^2-9\\leq0 \\\\ 5x+10>0 \\end{cases}</string>
    <string name="q1a1">(-2; 3)</string>
    <string name="q1a2">(-2; 3]</string>
    <string name="q1a3">[-2; 3)</string>
    <string name="q1a4">[-2; 3]</string>

    <string name="q2">Q2. If we reduce each side of a square by 10%,
        by what percentage will the area of a square shrink?</string>
    <string name="q2a1">10%</string>
    <string name="q2a2">15%</string>
    <string name="q2a3">19% </string>
    <string name="q2a4">100%</string>


    <string name="q3">Q3. Solve the equation and enter the asnwer:</string>
    <string name="q3_math"> $$9^x-25\\cdot3^x-54=0$$</string>

    <string name="q4">Q4. Solve this equation and select correct answers:</string>
    <string name="q4_math"> $${{x-1}\\over{x-2}}+ {{x-2}\\over{x-1}} = {5\\over2}$$</string>
    <string name="q4a1">0 </string>
    <string name="q4a2">2</string>
    <string name="q4a3">3 </string>
    <string name="q4a4">1</string>

    <string name="q5">Q5. Solve this equation:</string>
    <string name="q5_math"> $$2(4x-1)(x+1)=(4x+1)(x-1)-7$$</string>
    <string name="q5a1">0</string>
    <string name="q5a2">1</string>
    <string name="q5a3">No solution</string>
    <string name="q5a4">4</string>

    <string name="q6">Q6. What is the area of figure ADBC?</string>
    <string name="q6_math"> $$ y = -x^2+1 \\\\ y = -2x^2+2 $$</string>
    <string name="q6a1">4/2</string>
    <string name="q6a2">4/3</string>
    <string name="q6a3">8/3</string>
    <string name="q6a4">3/2</string>

    <string name="q7">Q7. Solve this equation:</string>
    <string name="q7_math"> $${1\\over{8}}(3^{x+1}-3^{x-1})=0,(3)$$</string>

    <string name="q8">Q8. Select the numbers that are equal: </string>
    <string name="q8_math"> $$ A:{10^5\\over{10^{-2}}}\\qquad  B:\\hspace{1mm}\2^7\\cdot5^7 \\\\
        C:\\hspace{1mm}10 000 000 \\qquad D:{1\\over{10^7}}$$</string>
    <string name="q8a1">A</string>
    <string name="q8a2">B</string>
    <string name="q8a3">C</string>
    <string name="q8a4">D</string>

</resources>
